--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 # Starter pipeline
+
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
@@ -17,3 +18,10 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+
+- task: AzureWebApp@1
+  inputs:
+    azureSubscription: 'Netmetix Internal(c27127a3-dff7-4e9b-90a0-c8c0ef1ad690)'
+    appType: 'webAppLinux'
+    appName: 'gstestlinux687567'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
